app/assets/stylesheets/application.scss
// Application.scss

@import "bootstrap";
@import "sweetalert2.css";
@import url('https://fonts.googleapis.com/css?family=Raleway:100,300,400');
@import "font-awesome";
@import "pages";
@import "portal";

// Color Scheme
// Purple #3B1F2B
// Red #DB162F
// Beige #DBDFAC
// GreyBlue $5F758E
// NavyBlue #383961

body, html {
  width: 100%;
  height: 100%;
}

body, h1, h2, h3, h4, h5, h6 {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  font-weight: 400;
}

a:hover{
	text-decoration: none;
}

.devise-login{
	margin-top: 3.2em;
	min-height: 100%;
}
.footer {
	padding: 50px 0;
	background-color: #383961;
	color: #DBDFAC;
	position: relative;
	bottom: 0;
	min-width: 100%;
	a:hover {
		color: #DB162F;
	}
	a,p {
		color: #DBDFAC;
	}
}

